--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
 <body>
     <h1>Here we go</h1>
+    <footer>
+        <p>Hej footer</p>
+    </footer>
     <script src="main.js"></script>
 </body>
 
